--- a/app/src/main/res/drawable/botones_rectangulares_redondos.xml
+++ b/app/src/main/res/drawable/botones_rectangulares_redondos.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/colorBotonBG"></solid>
-    <corners
-        android:radius="30dp"
-        />
-</shape>
+<selector  xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="false">
+        <shape
+            android:shape="rectangle">
+            <solid android:color="@color/colorBotonBG"></solid>
+            <corners
+                android:radius="30dp"
+                />
+        </shape>
+
+    </item>
+    <item android:state_pressed="true">
+        <shape
+            android:shape="rectangle">
+            <solid android:color="@color/colorBotonNumPresBG"></solid>
+            <corners
+                android:radius="30dp"
+                />
+        </shape>
+
+    </item>
+
+</selector>
