--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,23 @@
     tools:context=".MainActivity">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:id="@+id/txtv_disp_opera"
         android:text="5+5+7"
+        android:textColor="@color/white"
         android:gravity="right"
-        android:textSize="45sp"
+        android:textSize="30sp"
         android:paddingRight="10sp"
         android:background="@color/colorDisplay"
         />
     <TextView
         android:id="@+id/txtv_disp_resultado"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:text="17"
+        android:textColor="@color/white"
         android:gravity="right"
-        android:textSize="45sp"
+        android:textSize="30sp"
         android:paddingRight="10sp"
         android:background="@color/colorDisplay"
         />
@@ -37,6 +39,7 @@
         android:id="@+id/btn_clear"
         style="@style/BotonesOpera"
         android:text="c"
+        android:onClick="onClick"
         android:layout_column="0"
         android:layout_row="0"
         android:layout_margin="2dp"
@@ -74,6 +77,7 @@
             android:layout_column="0"
             android:layout_row="1"
             android:layout_margin="2dp"
+            android:onClick="onClick"
             />
 
         <Button
@@ -83,6 +87,7 @@
             android:layout_column="1"
             android:layout_row="1"
             android:layout_margin="2dp"
+            android:onClick="onClick"
             />
         <Button
             android:id="@+id/btn_nueve"
@@ -91,6 +96,7 @@
             android:layout_column="2"
             android:layout_row="1"
             android:layout_margin="2dp"
+            android:onClick="onClick"
             />
         <Button
             android:id="@+id/btn_cuatro"
@@ -99,6 +105,7 @@
             android:layout_column="0"
             android:layout_row="2"
             android:layout_margin="2dp"
+            android:onClick="onClick"
             />
         <Button
             android:id="@+id/btn_cinco"
@@ -107,6 +114,7 @@
             android:layout_column="1"
             android:layout_row="2"
             android:layout_margin="2dp"
+            android:onClick="onClick"
             />
         <Button
             android:id="@+id/btn_seis"
@@ -115,14 +123,16 @@
             android:layout_column="2"
             android:layout_row="2"
             android:layout_margin="2dp"
+            android:onClick="onClick"
             />
         <Button
             android:id="@+id/btn_tres"
             style="@style/BotonesNumericos"
             android:text="3"
-            android:layout_column="0"
+            android:layout_column="2"
             android:layout_row="3"
             android:layout_margin="2dp"
+            android:onClick="onClick"
             />
         <Button
             android:id="@+id/btn_dos"
@@ -131,14 +141,16 @@
             android:layout_column="1"
             android:layout_row="3"
             android:layout_margin="2dp"
+            android:onClick="onClick"
             />
         <Button
             android:id="@+id/btn_uno"
             style="@style/BotonesNumericos"
             android:text="1"
-            android:layout_column="2"
+            android:layout_column="0"
             android:layout_row="3"
             android:layout_margin="2dp"
+            android:onClick="onClick"
             />
         <Button
             android:id="@+id/btn_cero"
@@ -147,10 +159,52 @@
             android:layout_column="1"
             android:layout_row="4"
             android:layout_margin="2dp"
+            android:onClick="onClick"
             />
 
+        <Button
+            android:id="@+id/btn_punto"
+            style="@style/BotonesNumericos"
+            android:text="."
+            android:layout_column="0"
+            android:layout_row="4"
+            android:layout_margin="2dp"
+            />
 
-
+        <Button
+            android:id="@+id/btn_signo"
+            style="@style/BotonesNumericos"
+            android:text="+/-"
+            android:layout_column="2"
+            android:layout_row="4"
+            android:layout_margin="2dp"
+            />
+        <Button
+            android:id="@+id/btn_resta"
+            style="@style/BotonesOpera"
+            android:text="-"
+            android:layout_column="3"
+            android:layout_row="1"
+            android:layout_margin="2dp"
+            />
+        <Button
+            android:id="@+id/btn_suma"
+            style="@style/BotonesOpera"
+            android:text="+"
+            android:layout_column="3"
+            android:layout_row="2"
+            android:layout_margin="2dp"
+            />
+        <Button
+            android:id="@+id/btn_igual"
+            style="@style/BotonesOpera"
+            android:text="="
+            android:layout_column="3"
+            android:layout_row="3"
+            android:layout_rowSpan="2"
+            android:layout_gravity="fill_vertical"
+            android:layout_margin="2dp"
+            />
 
 
 
